added the correct musicLibraryAPI dependency

--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,6 @@
 	</properties>
 
 	<dependencies>
-                <dependency>
-                    <groupId>com.libraryapi</groupId>
-                    <artifactId>musicLibraryApI</artifactId>
-                    <version>0.0.1-SNAPSHOT</version>
-                    <!--compile is the default value-->
-                   <!--<scope>compile</scope>-->
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -51,6 +44,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+<!--                    <groupId>com.mycompany</groupId>
+                    <artifactId>musicLibraryAPI</artifactId>
+                    <version>1.0-SNAPSHOT</version>-->
+                    <groupId>com.musicLibrary</groupId>
+                    <artifactId>musicLibraryAPI</artifactId>
+                    <version>1.0-SNAPSHOT</version>
+                    
+                    <!--compile is the default value-->
+                   <!--<scope>compile</scope>-->
+                </dependency>
 	</dependencies>
 
 	<build>
