--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
                     <!--compile is the default value-->
                    <!--<scope>compile</scope>-->
                 </dependency>
+                
+                <!-- https://mvnrepository.com/artifact/org.json/json -->
+                <dependency>
+                    <groupId>org.json</groupId>
+                    <artifactId>json</artifactId>
+                    <version>20180130</version>
+                </dependency>
 	</dependencies>
 
 	<build>
